# mrst-rag-project

./: .env.example  .gitignore  README.md  advanced_book_dict.txt  app.py  book_embeddings.pkl  embed_again.py  embed_books.py  generate_papers_dataset.py  graph.py  journal_count.pkl  new_paper_dataset.ipynb  pyproject.toml  requirements.txt  test.ipynb  test_embeddings.pkl  test_github_loader.py
.streamlit/: config.toml
classes/: GitAgent.py  git.py
datasets/: folk_ntnu_df.pkl  username_dataset.pkl
frontend/: app.py  terminal.py
generate_book_dataset/: chapters_to_authors.py  test.ipynb
generate_book_dataset[old]/: advanced_book_df.pkl  introduction_book_df.pkl
generate_papers_dataset/: test.ipynb
src/mrst_competence_query/: graph.py  questions.py
src/mrst_competence_query/classes/: GitAgent.py
src/mrst_competence_query/datasets/: mrst_repository_embeddings.pkl
src/mrst_competence_query/generate_book_dataset/: embed_books.py  test.ipynb
src/mrst_competence_query/generate_papers_dataset/: embed_papers.py  generate_papers_dataset.py  google_scholar.py  test.ipynb
src/mrst_competence_query/tools/: sintef_search_tool.py
src/mrst_competence_query/utils/scripts/: test_operations.ipynb
tests/: book_test.py  chapter_image_test.py  generate_keywords_test.py  pipeline_test.py  semantic_match_matrix_test.py  test.ipynb  vizualize_graph.py
tools/: sintef_search_tool.py
