[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mrst_competence_query"
version = "0.1.0"
description = ""
authors = [
    {name = "Åsmund Mjøs", email = "Aasmund.mjos@sintef.no"}
]
readme = "README.md"
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["src"]
