[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mrst_competence_query"
version = "0.1.0"
description = ""
authors = [
    {name = "Åsmund Mjøs", email = "Aasmund.mjos@sintef.no"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas==2.2.3",
    "numpy==2.0.0",
    "hdbscan==0.8.40",
    "umap-learn==0.5.7",
    "nltk==3.9.1",
    "sentence-transformers==3.3.1",
    "openai==1.86.0",
    "python-dotenv==1.1.0",
    "langchain==0.3.26",
    "langchain-core==0.3.66",
    "langchain-openai==0.3.24",
    "langchain-text-splitters==0.3.8",
    "langchain-docling==1.0.0",
    "langsmith==0.4.1",
    "scikit-learn==1.7.1",
    "matplotlib==3.10.3",
    "langgraph==0.5.4",
    "networkx==3.5",
    "pygraphviz==1.14",
    "streamlit==1.47.1"
]

[tool.setuptools.packages.find]
where = ["src"]
